kubernetes/quay/components/backup/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: s3-allow-truenas-egress
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: s3-cron
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.7/32
    - to:
        - ipBlock:
            cidr: 10.101.10.7/32
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ceph-obj-s3-backup
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      app: s3-cron
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: cephobjectstores.ceph.rook.io
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
      ports:
        - protocol: TCP
          port: 8080
